examples/d2/d2-plugin/code/D2Assembly/D2AssemblyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\Daniel\winrepos\logix\examples\d2\d2-plugin\code\D2Assembly\D2Assembly.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class D2AssemblyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, INSTRUCTION=21, LABEL=22, BINARY=23, HEXADECIMAL=24, 
		DECIMAL=25, NEWLINE=26, WS=27, STRINGLITERAL=28, COMMENT=29;
	public const int
		RULE_prog = 0, RULE_line = 1, RULE_constantline = 2, RULE_directiveline = 3, 
		RULE_directive = 4, RULE_orgdir = 5, RULE_worddir = 6, RULE_asciizdir = 7, 
		RULE_dbdir = 8, RULE_instrline = 9, RULE_symbolline = 10, RULE_symbol = 11, 
		RULE_argument = 12, RULE_immediate = 13, RULE_number = 14;
	public static readonly string[] ruleNames = {
		"prog", "line", "constantline", "directiveline", "directive", "orgdir", 
		"worddir", "asciizdir", "dbdir", "instrline", "symbolline", "symbol", 
		"argument", "immediate", "number"
	};

	private static readonly string[] _LiteralNames = {
		null, "'='", "'.'", "'org'", "'word'", "'asciiz'", "'db'", "','", "':'", 
		"'('", "')'", "'x'", "'y'", "'#'", "'<'", "'>'", "'+'", "'-'", "'*'", 
		"'&'", "'|'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "INSTRUCTION", "LABEL", 
		"BINARY", "HEXADECIMAL", "DECIMAL", "NEWLINE", "WS", "STRINGLITERAL", 
		"COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "D2Assembly.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static D2AssemblyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public D2AssemblyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public D2AssemblyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(D2AssemblyParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << INSTRUCTION) | (1L << LABEL))) != 0)) {
				{
				{
				State = 30;
				line();
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 36;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SymbollineContext symbolline() {
			return GetRuleContext<SymbollineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstrlineContext instrline() {
			return GetRuleContext<InstrlineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectivelineContext directiveline() {
			return GetRuleContext<DirectivelineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantlineContext constantline() {
			return GetRuleContext<ConstantlineContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 42;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 38;
				symbolline();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 39;
				instrline();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 40;
				directiveline();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 41;
				constantline();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantlineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LABEL() { return GetToken(D2AssemblyParser.LABEL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BINARY() { return GetToken(D2AssemblyParser.BINARY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEXADECIMAL() { return GetToken(D2AssemblyParser.HEXADECIMAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DECIMAL() { return GetToken(D2AssemblyParser.DECIMAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(D2AssemblyParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(D2AssemblyParser.NEWLINE, i);
		}
		public ConstantlineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constantline; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantlineContext constantline() {
		ConstantlineContext _localctx = new ConstantlineContext(Context, State);
		EnterRule(_localctx, 4, RULE_constantline);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			Match(LABEL);
			State = 45;
			Match(T__0);
			State = 46;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BINARY) | (1L << HEXADECIMAL) | (1L << DECIMAL))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 48;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 47;
				Match(NEWLINE);
				}
				}
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectivelineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext directive() {
			return GetRuleContext<DirectiveContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SymbolContext symbol() {
			return GetRuleContext<SymbolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(D2AssemblyParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(D2AssemblyParser.NEWLINE, i);
		}
		public DirectivelineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directiveline; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirectiveline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectivelineContext directiveline() {
		DirectivelineContext _localctx = new DirectivelineContext(Context, State);
		EnterRule(_localctx, 6, RULE_directiveline);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LABEL) {
				{
				State = 52;
				symbol();
				}
			}

			State = 55;
			directive();
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 56;
				Match(NEWLINE);
				}
				}
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OrgdirContext orgdir() {
			return GetRuleContext<OrgdirContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WorddirContext worddir() {
			return GetRuleContext<WorddirContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AsciizdirContext asciizdir() {
			return GetRuleContext<AsciizdirContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DbdirContext dbdir() {
			return GetRuleContext<DbdirContext>(0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(Context, State);
		EnterRule(_localctx, 8, RULE_directive);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			Match(T__1);
			State = 66;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
				{
				State = 62;
				orgdir();
				}
				break;
			case T__3:
				{
				State = 63;
				worddir();
				}
				break;
			case T__4:
				{
				State = 64;
				asciizdir();
				}
				break;
			case T__5:
				{
				State = 65;
				dbdir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrgdirContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public OrgdirContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orgdir; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrgdir(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrgdirContext orgdir() {
		OrgdirContext _localctx = new OrgdirContext(Context, State);
		EnterRule(_localctx, 10, RULE_orgdir);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(T__2);
			State = 69;
			number(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WorddirContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public WorddirContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_worddir; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWorddir(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WorddirContext worddir() {
		WorddirContext _localctx = new WorddirContext(Context, State);
		EnterRule(_localctx, 12, RULE_worddir);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(T__3);
			State = 72;
			number(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AsciizdirContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRINGLITERAL() { return GetToken(D2AssemblyParser.STRINGLITERAL, 0); }
		public AsciizdirContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_asciizdir; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAsciizdir(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AsciizdirContext asciizdir() {
		AsciizdirContext _localctx = new AsciizdirContext(Context, State);
		EnterRule(_localctx, 14, RULE_asciizdir);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(T__4);
			State = 75;
			Match(STRINGLITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DbdirContext : ParserRuleContext {
		public NumberContext _number;
		public IList<NumberContext> _nums = new List<NumberContext>();
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		public DbdirContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dbdir; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDbdir(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DbdirContext dbdir() {
		DbdirContext _localctx = new DbdirContext(Context, State);
		EnterRule(_localctx, 16, RULE_dbdir);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			Match(T__5);
			State = 78;
			_localctx._number = number(0);
			_localctx._nums.Add(_localctx._number);
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__6) {
				{
				{
				State = 79;
				Match(T__6);
				State = 80;
				_localctx._number = number(0);
				_localctx._nums.Add(_localctx._number);
				}
				}
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstrlineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INSTRUCTION() { return GetToken(D2AssemblyParser.INSTRUCTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SymbolContext symbol() {
			return GetRuleContext<SymbolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentContext argument() {
			return GetRuleContext<ArgumentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(D2AssemblyParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(D2AssemblyParser.NEWLINE, i);
		}
		public InstrlineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instrline; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstrline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstrlineContext instrline() {
		InstrlineContext _localctx = new InstrlineContext(Context, State);
		EnterRule(_localctx, 18, RULE_instrline);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LABEL) {
				{
				State = 86;
				symbol();
				}
			}

			State = 89;
			Match(INSTRUCTION);
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << LABEL) | (1L << BINARY) | (1L << HEXADECIMAL) | (1L << DECIMAL))) != 0)) {
				{
				State = 90;
				argument();
				}
			}

			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 93;
				Match(NEWLINE);
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SymbollineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SymbolContext symbol() {
			return GetRuleContext<SymbolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(D2AssemblyParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(D2AssemblyParser.NEWLINE, i);
		}
		public SymbollineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_symbolline; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSymbolline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SymbollineContext symbolline() {
		SymbollineContext _localctx = new SymbollineContext(Context, State);
		EnterRule(_localctx, 20, RULE_symbolline);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			symbol();
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 99;
				Match(NEWLINE);
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SymbolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LABEL() { return GetToken(D2AssemblyParser.LABEL, 0); }
		public SymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_symbol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSymbol(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SymbolContext symbol() {
		SymbolContext _localctx = new SymbolContext(Context, State);
		EnterRule(_localctx, 22, RULE_symbol);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			Match(LABEL);
			State = 105;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentContext : ParserRuleContext {
		public IToken indirect;
		public IToken indirectx;
		public IToken indirecty;
		public IToken x;
		public IToken y;
		[System.Diagnostics.DebuggerNonUserCode] public ImmediateContext immediate() {
			return GetRuleContext<ImmediateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentContext argument() {
		ArgumentContext _localctx = new ArgumentContext(Context, State);
		EnterRule(_localctx, 24, RULE_argument);
		try {
			State = 133;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107;
				immediate();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108;
				_localctx.indirect = Match(T__8);
				State = 109;
				number(0);
				State = 110;
				Match(T__9);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 112;
				Match(T__8);
				State = 113;
				number(0);
				State = 114;
				Match(T__9);
				State = 115;
				Match(T__6);
				State = 116;
				_localctx.indirectx = Match(T__10);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 118;
				Match(T__8);
				State = 119;
				number(0);
				State = 120;
				Match(T__9);
				State = 121;
				Match(T__6);
				State = 122;
				_localctx.indirecty = Match(T__11);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 124;
				number(0);
				State = 125;
				Match(T__6);
				State = 126;
				_localctx.x = Match(T__10);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 128;
				number(0);
				State = 129;
				Match(T__6);
				State = 130;
				_localctx.y = Match(T__11);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 132;
				number(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImmediateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public ImmediateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_immediate; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2AssemblyVisitor<TResult> typedVisitor = visitor as ID2AssemblyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImmediate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImmediateContext immediate() {
		ImmediateContext _localctx = new ImmediateContext(Context, State);
		EnterRule(_localctx, 26, RULE_immediate);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			Match(T__12);
			State = 136;
			number(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		public IToken bin;
		public IToken hex;
		public IToken dec;
		public IToken lab;
		public IToken lowbyte;
		public IToken highbyte;
		public IToken plus;
		public IToken minus;
		public IToken mult;
		public IToken and;
